crates/carta/tests/snapshots/golden_writer__markdown_github__table__table-body-head.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h1    | h2     |
|-------|--------|
| group | values |
| k1    | v1     |
| k2    | v2     |
