crates/carta/tests/snapshots/golden_writer__markdown_github__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<thead>
<tr>
<th>name</th>
<th>notes</th>
</tr>
</thead>
<tbody>
<tr>
<td>alpha</td>
<td><p>first paragraph</p>
<ul>
<li>one</li>
<li>two</li>
</ul></td>
</tr>
</tbody>
</table>
