crates/carta/tests/snapshots/golden_writer__markdown_github__table__table-empty-header.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
|     |     |
|-----|-----|
| a   | b   |
