crates/carta/tests/snapshots/golden_writer__markdown_github__table__table-foot.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h1  | h2  |
|-----|-----|
| a   | b   |
| sum | 3   |
