crates/carta/tests/snapshots/golden_writer__markdown_github__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| a   | b   |
|-----|-----|
| 1   | 2   |
