crates/carta/tests/snapshots/golden_writer__markdown_github__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h   |
|-----|
| v   |

The full caption text
